--- a/app/src/main/res/layout/forgetpassword.xml
+++ b/app/src/main/res/layout/forgetpassword.xml
@@ -2,10 +2,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    android:layout_margin="16dp"
+    android:orientation="vertical">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="你忘记密码，我也没办法呀~"
-        android:textSize="50sp"/>
+        android:layout_marginBottom="30dp"
+        android:layout_gravity="center"
+        android:text="忘记密码"
+        android:textSize="28sp"
+        android:textColor="#000000"/>
+    <EditText
+        android:id="@+id/et_forgotUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:hint="QQ/手机号/邮箱"/>
+    <Button
+        android:id="@+id/bt_findPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#0080ff"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:text="找回密码"/>
+    <ListView
+        android:id="@+id/lv_forgotPassword"
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </ListView>
 </LinearLayout>
