--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,11 @@
         android:id="@+id/id_fragment_title"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:name="cn.guotianyu.datastorage.TitleFragment"/>
+        android:name="cn.guotianyu.datastorage.fragment.TitleFragment"/>
     <include
         android:id="@+id/id_ly_bottom"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="55dp"
         layout="@layout/fragment_bottom"
         android:layout_alignParentBottom="true"/>
     <fragment
@@ -23,6 +23,6 @@
         android:layout_height="match_parent"
         android:layout_above="@id/id_ly_bottom"
         android:layout_below="@id/id_fragment_title"
-        android:name="cn.guotianyu.datastorage.HomeFragment"/>
+        android:name="cn.guotianyu.datastorage.fragment.HomeFragment"/>
 
 </RelativeLayout>
