--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,13 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <ListView
+        android:id="@+id/lv_home"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="使用Fragment做主面板"
-        android:textSize="20sp"
-        android:background="#ffffff"
-        android:textStyle="bold"/>
+        android:layout_height="match_parent">
+    </ListView>
+
 
 </FrameLayout>
